syntax = "proto3";
import "responses.proto";
import "requests.proto";

option go_package = "./pb";

service Fana {
  rpc GetFlag(ID) returns (FlagFullResp);
  rpc GetFlags(Empty) returns (Flags);
  rpc GetAudience(ID) returns (AudienceFullResp);
  rpc GetAudiences(Empty) returns (Audiences);
  rpc GetAttribute(ID) returns (AttributeResp);
  rpc GetAttributes(Empty) returns (Attributes);
  rpc GetSDKKeys(Empty) returns (SDKKeys);
  rpc GetAuditLogs(Empty) returns (AuditLogResp);

  rpc CreateFlag(FlagSubmit) returns (FlagFullResp);
  rpc CreateAudience(AudSubmit) returns (AudienceFullResp);
  rpc CreateAttribute(AttrSubmit) returns (AttributeResp);

  rpc UpdateFlag(FlagUpdate) returns (FlagFullResp);
  rpc UpdateAudience(AudUpdate) returns (AudienceFullResp);

  rpc RegenerateSDK(ID) returns (SDKKey);
  
  rpc DeleteFlag(ID) returns (Empty);
  rpc DeleteAudience(ID) returns (Empty);
  rpc DeleteAttribute(ID) returns (Empty);
}

message ID {
  int32 ID = 1;
}